@@ -1,3 +1,4 @@
 NL0000235190;EADS;EAD;EURONEXT;EUR;PAR;NL
 NL0000400653;GEMALTO;GTO;EURONEXT;EUR;PAR;NL
 FR0000073272;SAFRAN;SAF;EURONEXT;EUR;PAR;FR
+FR0000044406;ASGROUPE;MLASE;PARIS MARCHE LIBRE;EUR;PAR;FR
